Edit README.md & make images wrap correctly on home tab

--- a/src/styles/contContent.css
+++ b/src/styles/contContent.css
@@ -1,15 +1,10 @@
 .cont-con {
   display: flex;
-  height: 95%;
-  width: 100%;
   flex-direction: column;
-  color: #69717a;
   align-items: center;
   padding: 0% 20% 0%;
-  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   text-align: center;
   justify-content: space-between;
-  overflow: auto;
 }
 
 .cont-con h1 {
