--- a/src/styles/menuContent.css
+++ b/src/styles/menuContent.css
@@ -4,11 +4,6 @@
   column-gap: 1.2rem;
   row-gap: 1.3rem;
   justify-content: center;
-  height: 95%;
-  width: 100%;
-  color: #69717a;
-  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
-  overflow: auto;
   font-size: 1.5em;
 }
 
