--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -70,6 +70,14 @@ nav {
   background-color: #ddd;
 }
 
+#content {
+  color: #69717a;
+  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  height: 95%;
+  width: 100%;
+  overflow: auto;
+}
+
 #content h1 {
   margin: 30px 0 15px;
   font-family: serif;
